Fix vmd unable to execute tcl